--- a/pom.xml
+++ b/pom.xml
@@ -14,64 +14,20 @@
           <version>3.8.1</version>
           <scope>test</scope>
       </dependency>
-
       <dependency>
-          <groupId>org.apache.tomcat</groupId>
-          <artifactId>tomcat-servlet-api</artifactId>
-          <version>8.0.5</version>
-          <scope>provided</scope>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-servlet</artifactId>
+          <version>9.2.10.v20150310</version>
       </dependency>
-
-
       <dependency>
-          <groupId>org.apache.tomcat</groupId>
-          <artifactId>tomcat-jsp-api</artifactId>
-          <version>8.0.5</version>
-
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>3.1.0</version>
       </dependency>
   </dependencies>
 
   <build>
       <plugins>
-          <plugin>
-              <groupId>org.mortbay.jetty</groupId>
-              <artifactId>maven-jetty-plugin</artifactId>
-          </plugin>
-
-          <!-- Eclipse project -->
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-eclipse-plugin</artifactId>
-              <version>2.9</version>
-              <configuration>
-                  <!-- Always download and attach dependencies source code -->
-                  <downloadSources>true</downloadSources>
-                  <downloadJavadocs>false</downloadJavadocs>
-                  <!-- Avoid type mvn eclipse:eclipse -Dwtpversion=2.0 -->
-                  <wtpversion>2.0</wtpversion>
-              </configuration>
-          </plugin>
-
-          <!-- Set JDK Compiler Level -->
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>2.3.2</version>
-              <configuration>
-                  <source>${jdk.version}</source>
-                  <target>${jdk.version}</target>
-              </configuration>
-          </plugin>
-
-          <!-- For Maven Tomcat Plugin -->
-          <plugin>
-              <groupId>org.apache.tomcat.maven</groupId>
-              <artifactId>tomcat7-maven-plugin</artifactId>
-              <version>2.2</version>
-              <configuration>
-                  <path>/CounterWebApp</path>
-              </configuration>
-          </plugin>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-dependency-plugin</artifactId>
@@ -84,7 +40,6 @@
                   </execution>
               </executions>
           </plugin>
-
 
       </plugins>
 
