--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,18 @@
           <artifactId>javax.servlet-api</artifactId>
           <version>3.1.0</version>
       </dependency>
+      <dependency>
+          <groupId>javax.mail</groupId>
+          <artifactId>mail</artifactId>
+          <version>${javamail.version}</version>
+      </dependency>
   </dependencies>
+    <properties>
+        <javamail.version>1.4.1</javamail.version>
+    </properties>
 
-  <build>
+
+    <build>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
