--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,10 @@
                   </execution>
               </executions>
           </plugin>
-
+          <plugin>
+              <groupId>org.mortbay.jetty</groupId>
+              <artifactId>maven-jetty-plugin</artifactId>
+          </plugin>
       </plugins>
 
       <finalName>CounterWebApp</finalName>
