--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 FROM = 18036086690@163.com
 MIMA = pjx94!
 SUBJECT = Apply For Leave
-TO = jason.peng@xplusz.com,juni.yang@xplusz.com,jack@xplusz.com
+TO = jason.peng@xplusz.com,japeng@contractor.ea.com
 HOST = smtp.163.com
-PORT = 465
+PORT = 25
