--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
       </dependency>
       <dependency>
           <groupId>org.jodd</groupId>
-          <artifactId>jodd</artifactId>
+          <artifactId>jodd-core</artifactId>
           <version>${jodd.version}</version>
       </dependency>
   </dependencies>
