--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <servlet>
         <servlet-name>Demo</servlet-name>
         <servlet-class>
-            com.test.Demo
+            com.test.wechatVacation
         </servlet-class>
     </servlet>
 
